--- a/src/componentes/NavBar.css
+++ b/src/componentes/NavBar.css
@@ -2,6 +2,11 @@ div {
     display: inline;
     list-style: none;
     background-color: aqua;
-    
+    margin: 25px, 25px;
 }
 
+a { 
+    list-style: none;
+    margin: 50px;
+    color: blueviolet;
+}
